[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-cron-scheduler"
version = "0.1.0"
description = "Intelligent cron task scheduler for OpenClaw with queue-based rate limiting"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "OpenClaw Contributors"}
]
keywords = ["cron", "scheduler", "queue", "openclaw", "rate-limiting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.0.0",
    "pyyaml>=5.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
openclaw-scheduler = "openclaw_cron_scheduler.cli:main"

[project.urls]
Homepage = "https://github.com/Fourier7754/openclaw-cron-scheduler"
Repository = "https://github.com/Fourier7754/openclaw-cron-scheduler"
Issues = "https://github.com/Fourier7754/openclaw-cron-scheduler/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["openclaw_cron_scheduler*"]

[tool.setuptools.package-data]
openclaw_cron_scheduler = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
